@@ -7,6 +7,8 @@ procps-ng-NEXT
   * skill: Match on -p again                               Debian #1025915
   * top: E/P-core toggle ('5' key) added to help
   * vmstat: Referesh memory statistics                     Debian #1027963
+  * vmstat: Fix initial si,so,bi,bo,in & cs values         issue #15
+                                                           Debian #668580
   * w: Add --pids option                                   merge #159
   * watch: Pass through beep                               issue #104
   * watch: -r option to not re-exec on SIGWINCH            merge #125
